log
Thu 28 Mar 2024 04:14:43 AM UTC: 
 tests:  0|6
total_score: 0/70
d9bcae0
Thu 28 Mar 2024 04:19:39 AM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:34:8: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   34 |   Lista->size = 0;
      |        ^~
Compilation failed
69d7c47
Thu 28 Mar 2024 04:19:51 AM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|5
total_score: 10/70
90467bc
Thu 28 Mar 2024 04:20:24 AM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|5
total_score: 10/70
6dda887
Thu 28 Mar 2024 04:22:42 AM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
68e7ad6
Thu 28 Mar 2024 04:23:23 AM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|5
total_score: 10/70
4c164eb
Thu 28 Mar 2024 04:26:00 AM UTC: 
 list.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:34:8: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   34 |   Lista-> size = 0;
      |        ^~
list.c: In function ‘firstList’:
list.c:40:1: error: control reaches end of non-void function [-Werror=return-type]
   40 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e6fd590
Thu 28 Mar 2024 04:26:45 AM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:41:1: error: control reaches end of non-void function [-Werror=return-type]
   41 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1dc6a38
Thu 28 Mar 2024 04:28:23 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
a8b946b
Thu 28 Mar 2024 04:28:38 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
dd99513
